# NSU_Robotics

md01/ex01/: commands.txt
md02/ex01/: .bashrc  ex01.txt
md02/ex03/KostKP/: CMakeLists.txt  package.xml
md02/ex04/: colcon_build.txt
md02/ex05/: rosnode_info.txt  rosnode_list.txt
md02/ex06/: cmd_vel.txt
md02/ex08/: rqt_console.csv  three_turtles.launch
md02/ex09/md02ex09_interfaces/: CMakeLists.txt  package.xml
md02/ex10/text_to_cmd_vel/: package.xml  setup.py
md02/ex10/text_to_cmd_vel/text_to_cmd_vel/: text_to_cmd_vel.py
md03/ex01/service_full_name/: CMakeLists.txt  package.xml
md03/ex01/service_full_name/src/: client_name.cpp  service_name.cpp
md03/ex01/service_full_name/srv/: SummFullName.srv
md03/ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel.mcap
md03/ex03/: doctor.txt
md03/ex04/move_to_goal/: package.xml  setup.py
md03/ex04/move_to_goal/move_to_goal/: move_to_goal.py
md03/ex05/action_cleaning_robot/: package.xml  setup.py
md03/ex05/action_cleaning_robot/action_cleaning_robot/: cleaning_action_client.py  cleaning_action_server.py
md03/ex05/action_cleaning_robot_interfaces/: CMakeLists.txt  package.xml
md03/ex05/action_cleaning_robot_interfaces/action/: CleaningTask.action
md04/ex01/: last_transform.txt  transform.txt
md04/ex02/turtle_tf2/: package.xml  setup.py
md04/ex02/turtle_tf2/launch/: turtle_tf2_launch.py
md04/ex02/turtle_tf2/rviz/: carrot.rviz
md04/ex02/turtle_tf2/turtle_tf2/: carrot_tf2_broadcaster.py  turtle_tf2_broadcaster.py  turtle_tf2_listener.py
md04/ex02b/turtle_multi_target/: CMakeLists.txt  package.xml
md04/ex02b/turtle_multi_target/launch/: multi_target_launch.py
md04/ex02b/turtle_multi_target/rviz/: carrot.rviz
md04/ex02b/turtle_multi_target/src/: target_switcher.cpp  turtle_controller.cpp  turtle_tf2_broadcaster.cpp
md04/ex03/md04ex03/: package.xml  setup.cfg  setup.py
md04/ex03/md04ex03/launch/: follow_with_delay_launch.py
md05/ex01/: robot.urdf  robot.xacro  robot_display.launch  robot_display_xarco.launch.py
md05/ex02/: robot.urdf  robot_display_urdf.launch.py
md05/ex03/: robot_display_gazebo.launch.py
md05/ex04/md05ex04/: package.xml  robot.gazebo.xacro  setup.cfg  setup.py
md05/ex05/: README.MD
md05/ex05/md05ex05/: package.xml  robot.gazebo.xacro  robot.rviz  setup.cfg  setup.py
md05/ex05/md05ex05/md05ex05/: random_movement.py
(+4 files in other folders)
